--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "scripts": {
         "build": "parcel build src/index.js -d dist --public-url ./ --detailed-report",
         "watch": "parcel watch src/index.js -d dist --public-url ./ ",
-        "http-server": "http-server . -p 8082 -c-1 -s"
+        "http-server": "http-server . -p 8082 -c-1",
+        "release:patch": "npm --no-git-tag-version version patch && npm run build",
+        "release:minor": "npm --no-git-tag-version version minor && npm run build"
     },
     "dependencies": {
         "localforage": "^1.7.3",
@@ -26,7 +28,7 @@
         "@babel/plugin-transform-runtime": "^7.5.5",
         "@vue/component-compiler-utils": "^2.6.0",
         "core-js": "^3.1.4",
-        "http-server": "git+https://github.com/Xmader/http-server.git",
+        "http-server": "^0.11.1",
         "parcel-bundler": "^1.12.3",
         "text-encoding": "^0.7.0",
         "typescript": "^3.5.3",
