--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "release:minor": "npm --no-git-tag-version version minor && npm run build"
     },
     "dependencies": {
+        "file-saver": "^2.0.2",
         "localforage": "^1.7.3",
         "vue": "^2.6.10",
         "vue-material": "~0.8.1"
@@ -26,6 +27,7 @@
     "devDependencies": {
         "@babel/core": "^7.5.5",
         "@babel/plugin-transform-runtime": "^7.5.5",
+        "@types/file-saver": "^2.0.1",
         "@vue/component-compiler-utils": "^2.6.0",
         "core-js": "^3.1.4",
         "http-server": "^0.11.1",
