--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "file-saver": "^2.0.2",
         "localforage": "^1.7.3",
         "vue": "^2.6.10",
+        "vue-clipboard2": "^0.3.0",
         "vue-material": "~0.8.1"
     },
     "devDependencies": {
