--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
-    "name": "peersend",
+    "name": "com.xmader.PeerSend",
+    "displayName": "PeerSend",
     "version": "1.0.0",
-    "main": "src/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Xmader/PeerSend.git"
     },
-    "author": "Xmader",
     "bugs": {
         "url": "https://github.com/Xmader/PeerSend/issues"
     },
     "homepage": "https://github.com/Xmader/PeerSend#readme",
-    "scripts": {
-        "build": "parcel build src/index.js -d dist --public-url ./ --detailed-report",
-        "watch": "parcel watch src/index.js -d dist --public-url ./ ",
-        "http-server": "http-server . -p 8082 -c-1",
-        "release:patch": "npm --no-git-tag-version version patch && npm run build",
-        "release:minor": "npm --no-git-tag-version version minor && npm run build"
-    },
+    "author": "Xmader",
+    "license": "MIT",
     "dependencies": {
-        "file-saver": "^2.0.2",
-        "localforage": "^1.7.3",
-        "vue": "^2.6.10",
-        "vue-clipboard2": "^0.3.0",
-        "vue-material": "~0.8.1"
+        "com-darryncampbell-cordova-plugin-intent": "^1.1.8",
+        "cordova-android": "^8.0.0"
     },
-    "devDependencies": {
-        "@babel/core": "^7.5.5",
-        "@babel/plugin-transform-runtime": "^7.5.5",
-        "@types/file-saver": "^2.0.1",
-        "@vue/component-compiler-utils": "^2.6.0",
-        "core-js": "^3.1.4",
-        "http-server": "^0.11.1",
-        "parcel-bundler": "^1.12.3",
-        "text-encoding": "^0.7.0",
-        "typescript": "^3.5.3",
-        "vue-hot-reload-api": "^2.3.3",
-        "vue-template-compiler": "^2.6.10",
-        "whatwg-fetch": "^3.0.0"
+    "cordova": {
+        "plugins": {
+            "com-darryncampbell-cordova-plugin-intent": {}
+        },
+        "platforms": [
+            "android"
+        ]
     },
-    "license": "MIT"
+    "scripts": {
+        "preinstall": "sh ./tools/cordova.sh init",
+        "postinstall": "cd src && npm install",
+        
+        "build": "cd src && npm run build",
+        "watch": "cd src && npm run watch",
+        "http-server": "cd src && npm run http-server",
+        "dev": "npm run watch && npm run http-server",
+
+        "start": "npm run build && cordova run android",
+        "buildApk": "npm run build && cordova build android --archs=arm --device",
+        "postbuildApk": "sh ./tools/post_build_apk.sh",
+
+        "build:web": "npm run build",
+        "build:cordova": "npm run buildApk",
+
+        "postversion": "node tools/post_version.js && npm run build",
+        "release:patch": "npm --no-git-tag-version version patch",
+        "release:minor": "npm --no-git-tag-version version minor"
+    }
 }
