--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,7 @@
         "@vue/component-compiler-utils": "^2.6.0",
         "core-js": "^3.1.4",
         "http-server": "^0.11.1",
+        "less": "^3.10.3",
         "parcel-bundler": "^1.12.3",
         "rimraf": "^3.0.0",
         "text-encoding": "^0.7.0",
