接收分享事件，和使用 Android 自带的分享功能发送到其它 APP

--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,8 @@
         "localforage": "^1.7.3",
         "vue": "^2.6.10",
         "vue-clipboard2": "^0.3.0",
-        "vue-material": "~0.8.1"
+        "vue-material": "~0.8.1",
+        "wechat-msg-text-parser": "^1.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
