--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@babel/core": "^7.5.5",
         "@babel/plugin-transform-runtime": "^7.5.5",
+        "@types/cordova-plugin-file": "^4.3.2",
         "@types/file-saver": "^2.0.1",
         "@vue/component-compiler-utils": "^2.6.0",
         "core-js": "^3.1.4",
